Bug 332267 - Edit of payment method in schedule not usually retained
Summary: Edit of payment method in schedule not usually retained
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-18 00:23 UTC by allan
Modified: 2017-07-05 12:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2014-03-18 00:23:07 UTC
In an existing schedule, if I edit the payment method from 'Other' to  'Direct debit' then accept the edit and exit, then if I immediately check the setting, occasionally the edit has been accepted, but usually it has reverted to 'Other'.  Saving and rechecking appears to make no difference.
However, the Schedule view seems to stay corrrect.


Reproducible: Always

Steps to Reproduce:
1.Open an existing schedule which has method 'Other'.
2.Edit the setting to  'Direct debit'.
3.OK and exit.
4.Reopen schedule. 
5.Repeat above several times.

Actual Results:  
Variable.  Sometimes the new setting is retained, or not.

Expected Results:  
The entered setting should always be displayed.

Different payment methods may behave differently - still checking.
Comment 1 Cristian Oneț 2014-09-25 05:32:04 UTC
Git commit cf613b8ed6448643a891209fe81ab24f7dbee355 by Cristian Oneț.
Committed on 25/09/2014 at 05:25.
Pushed by conet into branch 'master'.

Fix the payment method initialization in schedule editor.

Because the payment method filtering slot was connected before the
editor got setup it was being called during setup. This was wrong
since during setup the editor could emit operationTypeChanged with
various operations causing the filtering method to change a valid
initial value beacause it would not match the operation type.

Fixed this by connecting the slot after the editor was initialized.

M  +1    -1    kmymoney/dialogs/keditscheduledlg.cpp

http://commits.kde.org/kmymoney/cf613b8ed6448643a891209fe81ab24f7dbee355